--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html lang="es">
+<head> 
+<meta charset="UTF-8">
+<title>Proto-anim</title>
+</head>
 
+<body>
+  <div class="panel">
+   <img src="" class="img">
+   <div class="dialogue">
+     <p>Hola,soy xxxx.Como estas?</p>
+   </div>
+  </div>
+</body>   
+
+</html>
