--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div class="panel">
    <img src="" class="img">
    <div class="dialogue">
-     <p>Hola,soy xxxx.Como estas?</p>
+     <p class="words">Hola,soy xxxx.Como estas?</p>
    </div>
   </div>
 </body>   
