--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
 <head> 
-<meta charset="UTF-8">
+<meta charset="UTF-8"> 
+  <style src="style.css">
 <title>Proto-anim</title>
 </head>
 
