--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head> 
 <meta charset="UTF-8"> 
-  <style src="style.css">
+  <style href="style.css">
 <title>Proto-anim</title>
 </head>
 
