Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head> 
 <meta charset="UTF-8"> 
-  <style href="style.css" rel="style">
+  <link href="style.css" rel="style">
 <title>Proto-anim</title>
 </head>
 
