Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <div class="panel">
-   <img src="" class="img">
+   <img src="https://via.placeholder.com/300" class="img">
    <div class="dialogue">
      <p class="words">Hola,soy xxxx.Como estas?</p>
    </div>
