--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 
 <body>
   <div class="panel">
-   <img src="https://via.placeholder.com/300" class="img">
+   <!--<img src="https://via.placeholder.com/300" class="img">-->
    <div class="dialogue">
-     <p class="words">Hola,soy xxxx.Como estas?</p>
+     <p class="words">Hola,soy xxxx.¿Como estas?</p>
+     <button class="button">....</button>
    </div>
   </div>
 </body>   
