--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <div class="panel">
    <!--<img src="https://via.placeholder.com/300" class="img">-->
    <div class="dialogue">
-     <p class="words">Hola,soy xxxx.¿Como estas?</p>
-     <button class="button">....</button>
+     <p class="words">...Hi...</p>
    </div>
   </div>
+  <p class="instructions"></p>
 </body>   
 
 </html>
