added js scripts (file of phrases + dialogue manager

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="panel">
    <!--<img src="https://via.placeholder.com/300" class="img">-->
    <div class="dialogue">
-     <p class="words">...Hi...</p>
+     <p class="words" id="words">...Hi...</p>
    </div>
   </div>
   <p class="instructions"></p>
