--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
    </div>
   </div>
   <p class="instructions"></p>
-</body>   
+
+  <script src="phrases.js"></script>
+  <script src="dialogue-manager.js"></script>
+  </body>   
 
 </html>
