--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head> 
 <meta charset="UTF-8"> 
+  <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
 <title>Proto-anim</title>
 </head>
