--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <div class="panel">
    <!--<img src="https://via.placeholder.com/300" class="img">-->
    <div class="dialogue">
+     <p class="instruction">> Press SPACE to continue...</p>
      <p class="words" id="words">...Hi...</p>
    </div>
   </div>
